testing with local PostgreSQL (H2 not working yet)

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,7 +1,7 @@
 meta-conference {
 
   # The database configuration, please see the official Slick documentation for details http://slick.lightbend.com/.
-  database {
+  trial-database {
     //profile = "slick.jdbc.PostgresProfile$"
     profile = "net.sourcekick.service.meta.conference.CustomPostgresDriver$"
     db {
@@ -9,6 +9,18 @@ meta-conference {
       properties = {
         driver = "slick.jdbc.H2Profile"
         url = "jdbc:h2:mem:h2database1;DATABASE_TO_UPPER=false"
+      }
+      numThreads = 10
+    }
+  }
+
+  database {
+    profile = "net.sourcekick.service.meta.conference.CustomPostgresDriver$"
+    db {
+      dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+      properties = {
+        driver = "org.postgresql.Driver"
+        url    = "jdbc:postgresql://localhost:20062/meta_conference_test?user=meta_conference_test&password=changeit"
       }
       numThreads = 10
     }
